--- a/css/style.scss
+++ b/css/style.scss
@@ -21,14 +21,30 @@ body {
     position: relative;
 }
 
-a {
+.hover-underline {
     color: black;
     text-decoration: none;
+    position: relative;
 }
 
-a:hover {
-    text-decoration: underline;
+.hover-underline:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #000;
+    visibility: hidden;
+    transform: scaleX(0);
+    transition: all 0.3s ease-in-out 0s;
 }
+
+.hover-underline:hover:before {
+    visibility: visible;
+    transform: scaleX(1);
+}
+
 
 section {
     padding: 3em 10em;
@@ -39,11 +55,9 @@ section {
     }
 
     header {
-        max-width: 200px;
-        margin: 3em auto;
+        margin: 3em auto 5em auto;
         display: flex;
         align-items: center;
-        justify-content: center;
         position: relative;
         z-index: 1;
 
@@ -51,7 +65,7 @@ section {
             content: '';
             display: block;
             width: 100%;
-            height: 100%;
+            height: 40%;
             background: #D49E8D;
             position: absolute;
             left: 0;
@@ -66,7 +80,6 @@ section {
             color: black;
             mix-blend-mode: soft-light;
             margin: 0;
-            line-height: 1.8em;
         }
     }
 }
@@ -96,6 +109,19 @@ nav {
     .main-nav--item {
         margin: 0 1em;
         cursor: pointer;
+        &.selected {
+            &:after {
+                content: '';
+                display: block;
+                width: 100%;
+                height: 50%;
+                background: #DED1BD;
+                position: absolute;
+                left: 0;
+                bottom: 0;
+                z-index: -1;
+            }
+        }
     }
 
     .main-nav--list {
@@ -104,25 +130,36 @@ nav {
         display: flex;
         flex-direction: row-reverse;
         text-transform: lowercase;
+        transition: visibility 0s, opacity 0.5s linear;
+        visibility: hidden;
+        opacity: 0;
     }
 
 
 }
 
+#spacer {
+    height: 100vh;
+}
+
 .landing {
     height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: left;
     background: #DED1BD;
     position: fixed;
     width: 100%;
     top: 0;
     z-index: -1;
 
+    .landing-wrap {
+        display: flex;
+        align-items: center;
+        justify-content: left;
+        height: 100%;
+    }
+
     p {
         width: 60vw;
-        font-size: 7.5em;
+        font-size: 7em;
     }
 
     span {
@@ -139,7 +176,6 @@ nav {
 }
 
 .about {
-    margin-top: 100vh;
 
     .about--content {
         display: flex;
@@ -165,7 +201,7 @@ nav {
         background: url(../assets/about-me%20image.jpg);
         background-size: contain;
         background-attachment: fixed;
-        background-position: left center;
+        background-position: left 10em;
         background-repeat: no-repeat;
         flex: 1 1 40%;
 
@@ -265,8 +301,12 @@ nav {
     .contact-links {
         display: flex;
         flex-flow: wrap;
-        justify-content: space-around;
-        margin: 2em 0;
+        justify-content: center;
+        margin: 2em 0 5em 0;
+
+        .contact-link-item {
+            margin: 0 3em;
+        }
     }
 
 
@@ -305,6 +345,8 @@ footer {
         .main-nav--list-wrap {
             .main-nav--list {
                 display: none;
+                visibility: visible;
+                opacity: 1;
 
                 &.active {
                     display: block;
@@ -327,6 +369,7 @@ footer {
     }
 
     .about {
+
         .about--img,
         .about--text {
             flex: 1 1 100%;
