update mobile about

--- a/css/style.css
+++ b/css/style.css
@@ -307,6 +307,9 @@ footer {
 .about .about--text {
     flex: 1 1 100%;
   }
+  .about .about--img {
+    background-attachment: scroll;
+  }
   .about .about--text {
     margin-top: 1em;
     border-top: 0;
