--- a/css/style.scss
+++ b/css/style.scss
@@ -387,6 +387,7 @@ footer {
 
         .about--img {
             background-attachment: scroll;
+            background-position: center center;
         }
 
         .about--text {
