--- a/css/style.scss
+++ b/css/style.scss
@@ -314,6 +314,10 @@ nav {
 
         .contact-link-item {
             margin: 0 2em;
+
+            img {
+                max-width: 32px;
+            }
         }
     }
 
