--- a/css/style.scss
+++ b/css/style.scss
@@ -317,7 +317,15 @@ nav {
 
             img {
                 max-width: 32px;
+                transition: 0.3s;
+
+                &:hover {
+                    transform: scale(1.3);
+                }
             }
+
+
+
         }
     }
 
@@ -415,6 +423,10 @@ footer {
                     display: block;
                     position: absolute;
                     right: 0;
+                }
+
+                .main-nav--item {
+                    margin: 10px;
                 }
 
 
